# JSON-Database

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  json_database_docs.md  pyproject.toml  requirements-dev-lock.in  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
Schema/: README.md  collection-name.schema.json  database.schema.json  document.schema.json  query.schema.json
docs/: ACCEPTANCE.md  WHAT_I_LEARNED.md
docs/adr/: 0001-atomic-write-temp-rename.md  0002-whole-file-rewrite.md  0003-whole-file-lock.md  0004-uuid-primary-keys.md  0005-single-file-checksum.md  0006-os-file-locks.md  0007-integrity-report-status.md  0008-transaction-read-routing.md  0009-lock-file-persists.md  README.md
json_database/: __init__.py  __main__.py  atomic.py  cli.py  collection.py  database.py  errors.py  lock.py  query.py  serializer.py  storage.py  transaction.py
scripts/: demo.ps1  demo.py
tests/: test_atomic_write.py  test_cli.py  test_concurrency.py  test_database_crud.py  test_locking.py  test_query.py  test_serializer.py  test_storage_integrity.py  test_transactions.py  test_v1_operations.py
