[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "json-database"
version = "0.1.1"
description = "A small JSON-backed document database built in pure Python."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["json", "database", "document-store", "embedded", "education"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Database :: Database Engines/Servers",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.3.5"]

[dependency-groups]
dev = ["pytest>=8.3.5"]

[project.scripts]
jsondb = "json_database.cli:main"

[tool.setuptools.packages.find]
include = ["json_database*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
